# coriplus

./: .gitignore  CHANGELOG.md  README.md  genmig.sh  pyproject.toml
app/: __init__.py
src/coriplus/: __init__.py  admin.py  ajax.py  api.py  models.py  utils.py  website.py
src/coriplus/static/: lib.js  style.css
src/coriplus/templates/: 403.html  about.html  admin_base.html  admin_report_detail.html  admin_reports.html  base.html  change_password.html  confirm_delete.html  create.html  edit.html  edit_profile.html  explore.html  feed.html  homepage.html  join.html  login.html  notifications.html  privacy.html  report_message.html  terms.html  user_detail.html
src/coriplus/templates/includes/: infobox_profile.html
src/coriplus/templates/macros/: message.html
src/migrations/: 001_0_9_to_0_10.py  002_move_columns_from_userprofile.py
